src/objects/Grant_Reporting_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Reports__c</fullName>
        <label>Completed Reports</label>
        <summaryFilterItems>
            <field>Grant_Report_Detail__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Grant_Report_Detail__c.Grant_Reporting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Due_Date_Pretty__c</fullName>
        <formula>CASE(
		MONTH( Due_Date__c ),
		1, &quot;January&quot;,
		2, &quot;February&quot;,
		3, &quot;March&quot;,
		4, &quot;April&quot;,
		5, &quot;May&quot;,
		6, &quot;June&quot;,
		7, &quot;July&quot;,
		8, &quot;August&quot;,
		9, &quot;September&quot;,
		10, &quot;October&quot;,
		11, &quot;November&quot;,
		&quot;December&quot;
)
 &amp; &quot; &quot; &amp; TEXT( DAY( Due_Date__c ) ) &amp; &quot;, &quot; &amp; TEXT( YEAR( Due_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is designed to make the presentation of Due Dates &quot;prettier&quot; in Mail Merges.</inlineHelpText>
        <label>Due Date - Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Date the report needs to be delivered to Recipient</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Management__c</fullName>
        <label>Grant Management</label>
        <referenceTo>Grant_Management__c</referenceTo>
        <relationshipName>Grant_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Grant_Name__c</fullName>
        <description>For use on Reports/VF Pages to avoid SOQL call</description>
        <formula>Grant_Management__r.Name</formula>
        <label>Grant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Items__c</fullName>
        <inlineHelpText>How many separate items/documents make up this report?</inlineHelpText>
        <label>Report Items</label>
        <summaryForeignKey>Grant_Report_Detail__c.Grant_Reporting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Grant Report Milestone</label>
    <nameField>
        <displayFormat>GRMIL-{000000}</displayFormat>
        <label>Grant Milestone</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Reporting Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>